--- a/src/index.css
+++ b/src/index.css
@@ -325,7 +325,7 @@ background-color: #FFFFF9;
   top: 50%;
 
 }
-/* @media screen  and (max-width: 1600px){
+@media screen  and (max-width: 1600px){
   .chat_container {
     left: 75%;
     top:50%;
@@ -382,7 +382,7 @@ background-color: #FFFFF9;
         }
         } 
   
- */
+
 
 
 
@@ -558,7 +558,7 @@ button:focus {
   border-radius: 100px;
   position: fixed;
   bottom: 30px;
-  right: 30px;
+  right: 17px;
   /* transition: background-color 0.3s ease 0s, opacity 0.5s ease 0s, visibility 0.5s ease 0s; */
   opacity: 3;
   /* visibility: hidden; */
