--- a/src/Services/Services.css
+++ b/src/Services/Services.css
@@ -470,6 +470,7 @@ background-color: #72818b;
   font-family: 'roboto';
   color: black;
   cursor: pointer;
+  font-weight: bold;
 }
 .Service2_div{
   height: 259px;
@@ -497,6 +498,7 @@ background-color: #72818b;
   text-align: center;
   color: black;
   cursor: pointer;
+  font-weight: bold;
  
 }
 .Service3_div{
@@ -525,6 +527,7 @@ background-color: #72818b;
   font-size: 15px;
   font-family: 'roboto';
   color: black;
+  font-weight: bold;
 }
 
 
@@ -550,6 +553,8 @@ background-color: #72818b;
   font-family: 'roboto';
   color: black;
   cursor: pointer;
+  font-weight: bold;
+
 }
 .Service1_button:hover{
   background-color: #444545;
@@ -1420,7 +1425,7 @@ margin-left: 5px;
 }
 .search_icon {
   position: absolute;
-  left: 20px;
+  left: 25px;
   top: 24px;
   width: 20px;
 }
