--- a/src/Blogs/Blogs.css
+++ b/src/Blogs/Blogs.css
@@ -1502,7 +1502,7 @@
   align-self: start;
 }
 .height2_blogdetail{
-  font-size: 50px;
+  font-size: 32px;
   font-family: 'roboto';
   color: white;
 
@@ -1927,9 +1927,9 @@ background-color:#e8e8e8;
 }
 
 .p1_Blog{
-  color: #72818b;
+  color: #9ba1a5;
   margin-top: 40px;
-  font-size: 2vh;
+  font-size: 14px;
   font-family: 'roboto';
   line-height: 30px;
 }
