--- a/src/Contact/Contact.css
+++ b/src/Contact/Contact.css
@@ -222,7 +222,7 @@ body{
     align-self: center;
     background-color: black;
     width: 80vw;
-    height: 10vh;
+    height: 13vh;
     display: flex;
     justify-content: space-evenly;
 }
@@ -233,6 +233,75 @@ body{
     width: 100%;
     height: 100%;
     display: flex;
+ 
+    flex-direction: column;
+    justify-content: center;
+    /* justify-content: space-evenly; */
+    background-color: black;
+  }
+  .contact2_1 {
+    width: 60%;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 20px;
+    margin-left: 53px;
+    /* align-self: center; */
+    text-align: left;
+  }
+  .contact2_2 {
+    margin-top: 50px;
+    display: flex;
+    width: 50%;
+    flex-direction: column;
+    justify-content: center;
+    text-align: left;
+    font-family: "roboto";
+    color: white;
+    /* align-items: center; */
+    margin-left: 20;
+    margin-left: 48px;
+  }
+  .logoiconn {
+    align-self: left;
+  }
+  .contact2_3 {
+         width: 50%;
+      margin-top: 50px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      /* align-items: center; */
+      margin-left: 56px;
+  
+  }
+  .contact2_4 {
+    display: flex;
+    margin-top: 50px;
+    flex-direction: column;
+    justify-content: center;
+    color: white;
+  
+    margin-left: 50px;
+  }
+  .contact2_5 {
+    padding-top: 20px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    background-color: black;
+    font-size: 13px;
+    font-family: "roboto";
+    color: white;
+  }
+}
+@media only screen and (max-width:412px) {
+  .contact2{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    padding-left: 62px;
     flex-direction: column;
     justify-content: center;
     /* justify-content: space-evenly; */
@@ -575,7 +644,7 @@ position: absolute;
 
   .contact2 {
     width: 100%;
-    height:118%;
+    height:121%;
     display: flex;
     flex-direction: column;
     justify-content: center;
